--- a/.github/workflows/blog-post-medium.yml
+++ b/.github/workflows/blog-post-medium.yml
@@ -3,6 +3,9 @@ on:
     workflow_dispatch:
     schedule:
         - cron: '0 * * * *'
+    push:
+        branches:
+            - main
 jobs: 
     update-readme-with-blog: 
         name: Update README with latest blog posts in medium
